--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -10,6 +10,7 @@
 <tr><td width="742"><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/18/n13031991.md#1" target="_blank">吕惠卿为臣奸邪 徐神翁以隐言劝戒示警</a><br></h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/18/n13031991.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13044424-2103241531432483-150x120.jpg" align ="left"></a>北宋时期，天庆观有一道士，名叫徐守信。他终日洒扫，从事杂役。繁琐的杂务，世俗的喧哗，并没有影响他潜心修道。他修行有素，脱颖而出，在滚滚红尘施展了许多神迹，被世人尊称为徐神翁，成为民间早期的八仙之一。他身在道观方寸之地，朋友圈却遍及大宋官场。无论贤臣，还是奸佞，都慕其高德，长途跋涉拜见他。或问前程，或求医卜，恳祈神翁指点.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月28日 7:31 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/25/n13048316.md#1" target="_blank">【未解之谜】海市蜃楼 亦真亦幻</a><br></h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/25/n13048316.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13048321-1200x800-2-150x120.jpg" align ="left"></a>古今中外记录的海市蜃楼不胜枚举，奇观背后的成因至今仍然是谜。走进《未解之谜》，让我们一起欣赏美景奇幻的同时，感受大自然的传神写照。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月28日 7:00 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/26/n13049428.md#1" target="_blank">协助撰写《资治通鉴》 范祖禹前世为东汉开国名将</a><br></h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/26/n13049428.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12924144-shutterstock_1533266789@1200x1200-150x120.jpeg" align ="left"></a>熟悉中国历史的人对于被视为“此天地间必不可无之书，亦学者必不可不读之书”的《资治通鉴》应该是不陌生的，它是由北宋史学家司马光主编的一部多卷本编年体史书，共294卷，涵盖十六朝1362年的历史，而我们今天要说的主人公范祖禹亦是这部史书的编撰者之一，负责唐史部分，并有着“唐鉴公”的美誉。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月28日 5:17 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13052640.md#1" target="_blank">自称预见中共肺炎肆虐 英国灵媒曝来年大事</a><br></h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13052640.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13052666-shutterstock_132890264-150x120.jpg" align ="left"></a>英国灵媒弗尼瓦尔（Roxanne Furnival）声称，她在数年前就预见中共肺炎（武汉肺炎）肆虐、人人都戴着口罩的景象。现在，她预言未来几年可能会发生的大事，其中包括这波疫情的后续发展。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月28日 4:31 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/16/n13026407.md#1" target="_blank">暗战赤龙（21）英伦之行</a><br></h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/16/n13026407.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12943626-150ffe690b57040c2de7f0553f3998b1-150x120.jpg" align ="left"></a>将一个注册在避税岛国的公司管理账户密码交给了吴伟光，里边有5亿美元的资金可以调动。特别说明对行动死亡、伤残人员要特别抚恤，让他们家人今后生活、学习、发展没有后顾之忧。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月28日 3:00 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/24/n13044693.md#1" target="_blank">疫情下回忆 拉斐尔你在哪里？（上）—— 2019罗马之旅与拉斐尔的三张画</a><br></h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/24/n13044693.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2013/04/The_School_of_Athens__by_Raffaello_Sanzio_da_Urbino-150x120.jpg" align ="left"></a>记得有位十九世纪英国诗人造访威尼斯时，对着波光潋艳美丽的威尼斯感叹道：“噢！提香你在哪里？我思念他的色彩，蓝，红的，金色的??”......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月28日 8:38 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/16/n13026118.md#1" target="_blank">【忽必烈传】伯颜南伐势如破竹 南宋灭亡</a><br></h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/16/n13026118.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12980446-35c4b9556e32083c28b652e09d051e6a-150x120.jpg" align ="left"></a>蒙元取得襄樊之战的胜利，打开了南宋仰仗的长江上游的重要门户，元军前进的步伐已不是宋军所能阻挡得了的。忽必烈对此役非常满意，下诏嘉奖众将士。其后，诸多大臣将领提出乘胜南伐，刘整也入朝请命，愿率水军乘胜追击，杀过长江，直捣南宋都城。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月27日 10:00 PM			</td></tr>
@@ -36,6 +37,5 @@
 <tr><td width="742"><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/24/n13044059.md#1" target="_blank">五律：夏季</a><br></h3> 适逢生长季， 入夏水犹频。 沛雨催新叶， 甘霖洗旧尘。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月27日 12:12 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/25/n13047929.md#1" target="_blank">诗歌：红船将沉百年消</a><br></h3>一只红船南湖飘 百年逆天载赤妖 一船满满皆罪恶 血债累累冤魂号......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月26日 12:19 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/24/n13044060.md#1" target="_blank">诗歌：法轮大法好</a><br></h3>末法衰微天欲倾， 气功铺路救人行。 凤凰一唱群莺静， 大法开传各界听。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月26日 12:12 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/25/n13047928.md#1" target="_blank">新诗：堤上弦月</a><br></h3> 孤坐河堤上，看着 月光和粼光相互辉映 六月的南台湾 夏夜溪水常存天空的星星......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 11:53 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/news2007_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ixmwwk3204/djy/blob/master/gb/news2007.md#1<br><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/news2007.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ixmwwk3204/djy/blob/master/gb/news2007.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2007.htm">https://www.epochtimes.com/gb/news2007.htm</a>    （国内需<a href="https://github.com/ixmwwk3204/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
