--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -9,7 +9,6 @@
 随.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 5:20 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/28/n13053872.md#1" target="_blank">香港政情大风暴 时评人纷封口及关频道</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/28/n13053872.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13053874-DSC_7043-01-150x120.jpg" align ="left"></a>临近“七一”，香港传媒业界再遭受打压。继《苹果日报》被迫停刊后，6月27日，再有一名《苹果》前主笔卢峯被捕。香港网络媒体、时事评论人士与政治漫画家纷将文章、影片下架，关停社交频道，形成寒蝉效应。记协强烈谴责当局再次针对新闻工作者，形容恐怖笼罩业界。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 3:01 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/28/n13053664.md#1" target="_blank">美众院调查 揭中共如何操纵美企为其服务</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/28/n13053664.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13015095-gettyimages-2062513--150x120.jpeg" align ="left"></a>美国众议院情报委员会共和党的一份初步调查报告显示，中共正在操纵美国公司，以帮助其实现塑造公众舆论、影响政府决策和获取美国技术的目标。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 2:24 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/28/n13052583.md#1" target="_blank">【百年透视】共产主义是国际恐怖主义</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/28/n13052583.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13052784-A1--150x120.jpeg" align ="left"></a>中共建立至今100年，统治中国大陆也71年了。特别在建国后它利用掌控和垄断的政治、经济、文化、教育和媒体等资源，篡改和歪曲人类文明历史、掩盖它百年共产革命和专政反人类犯罪真相，为其杜撰了一套政治合法性面具，欺骗了不少没有身受其害的人，包括西方政界与学界。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 2:10 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/28/n13053586.md#1" target="_blank">通胀影响 九大食品和日用品品牌拟涨价</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/28/n13053586.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/12/groceryshopping-150x120.jpg" align ="left"></a>随着美国疫情缓解，经济迅速恢复活力，现在美国人开始担心，未来几个月的通货膨胀率将大幅上升。全国各地的公司都在考虑提高价格，以抵消原材料、能源和运输等成本飙升的影响。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 1:32 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/28/n13053804.md#1" target="_blank">组图：中共党庆草木皆兵 满街“朝阳群众”</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/28/n13053804.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13053813-42-150x120.jpg" align ="left"></a>中共百年党庆前，北京进入特级战备，街头巷尾，武警、公安、便衣、“朝阳群众”，三步一哨五步一岗。天安门广场附近的污井盖都经过安检打封，可谓“滴水不漏”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 1:27 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/28/n13052220.md#1" target="_blank">“清算中共百年反人类罪”纽约法拉盛图片展</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/28/n13052220.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13052228-150312-150x120.jpg" align ="left"></a>在中共所谓“百年党庆”之际，纽约华人举办各种活动揭露和声讨中共百年罪恶，让更多华人及各族裔的民众认清中共反人类的本质。6月27日至7月2日，“基督徒公义联盟”在法拉盛图书馆前举办“清算中共百年反人类罪”图片展，历数中共百年罪恶。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 1:17 AM							</td></tr>
@@ -35,5 +34,6 @@
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/26/n13049575.md#1" target="_blank">神韵重回世界舞台 康州首演爆满</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/26/n13049575.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13049868-2106261747461973-150x120.jpg" align ="left"></a>神韵艺术团2021年度全球巡回演出，6月26日在大纽约地区的康州斯坦福拉开序幕。神韵纽约艺术团重返世界舞台，再创奇迹。因疫情关闭一年多的派雷斯剧院（The Palace Theatre）现场座无虚席，首场演出就缔造剧院爆满的成绩。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月27日 9:35 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/26/n13049438.md#1" target="_blank">中美军力对比 差距到底多大（三）</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/26/n13049438.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13049499-51207782655_e528230cbb_k-150x120.jpg" align ="left"></a>世界军力排名第三位的中共，已经公开向美国挑衅；美军也正式把中共列为头号对手。中美军力越接近，中共主动挑起战事的可能性就越大。目前中美军力差距到底有多大呢？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月27日 2:09 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/26/n13048820.md#1" target="_blank">美中国通：中共在焦虑中等待百年 时刻忧垮台</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/26/n13048820.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2008/11/81108124341804-150x120.jpg" align ="left"></a>《华尔街日报》周五（6月25日）刊发哥伦比亚大学教授、中国通黎安友（Andrew Nathan）的专栏文章说，在中国共产党漫长的历史中，它现在是第一次遭遇合法性危机挑战，时刻担忧被解体。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月26日 11:50 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/26/n13049437.md#1" target="_blank">北京风雨雷雹齐降 多区砸鸡蛋大冰雹</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/26/n13049437.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13049448-8a3022ed3ba0b53201ba9eed9af35b36-150x120.jpg" align ="left"></a>6月25日，北京风、雨、雷、雹四警齐发，多个区密集砸下鸡蛋大小的冰雹，严重损毁车辆、农作物等。有当地民众直说，“太恐怖了。”......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月26日 11:45 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/hupjdu3701/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/hupjdu3701/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/hupjdu3701/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/hupjdu3701/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/hupjdu3701/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/hupjdu3701/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/hupjdu3701/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/hupjdu3701/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/hupjdu3701/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/hupjdu3701/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/hupjdu3701/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/hupjdu3701/djy/blob/master/gb/nf4514.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hupjdu3701/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/hupjdu3701/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
