--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -33,8 +33,10 @@
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/24/n13045486.md#1" target="_blank">阳剑：中共焰花纷飞 百姓血泪流河</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/24/n13045486.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13021258-008bIAPVgy1gri2eu1q4dj31690s7npd-150x120.jpg" align ="left"></a>2021年7月前夕，中共为了搞“百年大庆”，在广东封锁Delta 新冠疫情，很多小区封锁，民众怒吼生存艰难，但中共把全国的疫情确诊数一夜间修改下跌几千例。为营造党庆气氛，不出“乱子”，在全国各地抓捕、监视上访者、维权人士、法轮功修炼者、正义异己人士、进京限止截流盘查，天安门关闭开放，禁售禁飞无人飞机，北京连鸽子都禁飞….........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 3:09 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/24/n13044903.md#1" target="_blank">【名家专栏】北约最大威胁是中共不是俄罗斯</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/24/n13044903.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13044928-GettyImages-1233446600-150x120.jpg" align ="left"></a>北约终于以一种比较认真的态度处理（共产）中国问题了。这个以美国为首的联盟在一份联合公报中，把中国描述为一个“挑战”。但北约反应迟钝，仍步履蹒跚。虽然正确地认识到俄罗斯是北约主要的军事威胁（该国在2014年入侵乌克兰，而且仍然占据在那里），但这个历史上最强大的民主联盟继续淡化历史上最大的极权主义威胁：（共产）中国。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 3:08 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/24/n13044667.md#1" target="_blank">【网海拾贝】谁靠近中共谁倒楣</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/24/n13044667.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13043133-a9a980ab5a3bd9459c4a060dc11e8f90-150x120.jpg" align ="left"></a>周五，我收到朋友转来的一篇有关“全球受中共病毒打击最严重的10个国家中，有一半以上使用中国疫苗”的媒体报导。数据来源于一个叫Our World in Data的机构，它是由英国牛津大学创建的在线数据库，提供每百万人每天的感染数据。该机构通过对塞舌尔、乌拉圭、蒙古、科威特、智利等国家的感染数据进行分析后，得出上述结论。该.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 1:20 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/24/n13044022.md#1" target="_blank">【有冇搞错】中共的“土猪拱白菜”</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/24/n13044022.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13044834-38240a7d7afd7fcabfa44ecf7ca68484-150x120.jpg" align ="left"></a>“土猪拱白菜”，是最近大陆热议的一个话题。中共这只土猪，正在用仇恨拱全球的白菜。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月24日 9:15 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/24/n13044397.md#1" target="_blank">李勇：谁是终结共产主义的最后一个人</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/24/n13044397.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13044549-8efd3ab1c02703f3cd24a843e2f39702--150x120.jpeg" align ="left"></a>钟闻先生是美国中文报界杰出的新闻记者。80年代到90年代，我与他都是纽约华人社区从事采访工作的同业，因此很留意他发表在中文报章上的文稿。后来他离开新闻工作岗位，从事地产事业，并搬去维吉尼亚州居住。此后常在报章、杂志上拜读到他的大作。发现他摆脱新闻报导的狭窄范围，写作层面深广，文笔更为洗练，立论非常中肯，见解十分独到。经.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月24日 7:34 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/27/n13049996.md#1" target="_blank">杨箭：百年中共的百年罪恶</a><br></h3>中华文明，本茬人类伟大、悠久的文明，到了清朝末年，在西方实证科学、现代思潮等冲击下，不断式微。到民国时期，它原本可以通过调整、休养，到中国气功和传统文化复兴时得以恢复优化，但是，中共来了。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月27日 9:09 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/26/n13049849.md#1" target="_blank">周恩来下令杀顾顺章家十多人是怎么回事？</a><br></h3>最近，中共高官叛逃美国，成为海外媒体报道的热门话题。6月19日，中国检察监察网发表文章《永不叛党不仅仅是一句誓言》，专门提到1931年5月21日中共中央发出的“永远开除叛徒顾顺章党籍”的第223号通知，由此引出周恩来下令杀顾顺章家里十多人的历史旧案。
+顾顺章何许人也？
+顾顺章，上海宝山吴淞人。1924年加入中共；1.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月27日 7:32 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/25/n13046662.md#1" target="_blank">中共罪行录之三十二：一句话右派</a><br></h3>华中1949年“参加革命工作”，51年入团，56年以在职干部身份参加高考，被某师范学院录取。直到反右前，他一直认为自己在政治上是很过硬的。斯大林去世时，他心情非常沉重，两天茶饭不思。当时，他在XX人民革命大学学习，对班上一些照旧嘻嘻哈哈、打打闹闹的同学横眉以对。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 2:31 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/24/n13045595.md#1" target="_blank">祝君安：百年僵尸罄绝</a><br></h3>一撮赤匪百年狂
 吃人狼性
