--- a/gb/nf5773.md
+++ b/gb/nf5773.md
@@ -21,6 +21,7 @@
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/3/n12996970.md#1" target="_blank">中共央企子公司财务造假 股民提讼</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/3/n12996970.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/03/f80692d01700a75f47b5b994b18a8513-150x120.jpg" align ="left"></a>继康美药业、康得新之后，中信国安因连续7年财务造假被中共证监会处罚。与前两家上市公司不同的是，中信国安是中共央企旗下的子公司。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月04日 6:21 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/3/n12995666.md#1" target="_blank">社科院教授曝党史：红军筹款五招 绑票挖坟勒索</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/3/n12995666.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id12996033-GettyImages-182634383-150x120.jpg" align ="left"></a>中国社会科学院教授陈铁健在近期的一次党史讲座中援引官方文件披露，早期的中共除了煽动农民仇恨地主之外，还总结了多个筹款招数，其中包括绑票，把有钱人家的子女抓来勒索，不赎就撕票；另外，把人家的祖坟掘开，把骨头拿出来，然后勒索赎金。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月04日 3:28 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/2/n12993025.md#1" target="_blank">再有政法系老虎落马 青海省检察长蒙永山被查</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/2/n12993025.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id12993348-mengyongshan-150x120.jpg" align ="left"></a>6月2日，中共政法系统再有老虎落马。中共青海省检察院检察长蒙永山被通报主动投案、现被调查。蒙永山被指是中共十八大以来第三名落马的省级检察长。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月02日 5:49 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/28/n13052397.md#1" target="_blank">中共十八大以来 392名省部级高官被查</a><br></h3>中共官方称，中共十八大以来至今年5月，纪检机关共立案审查调查省部级以上的领导官员近400人、厅局级2万多人，还有数十万县处级及乡科级官员。分析指，中共已烂透，只有抓江泽民、解体中共才是真反腐。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月28日 3:48 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/19/n13032886.md#1" target="_blank">小官巨贪 内蒙古一煤炭局官员敛财超2亿</a><br></h3>中共官场“小官巨贪”的丑闻频曝光。6月18日，中共内蒙古鄂尔多斯市煤炭局前党委书记、局长郭成信“受贿、巨额财产来源不明案”开庭审理。郭成信被指控受贿9000余万元（人民币，下同），并有1.1亿余元不能说明来源。
 
 郭成信被指利用职务上的便利，为他人谋取利益，收受款物合计9033.3922万元，数额特别巨大，应以“受贿罪”追究其刑责。另外，郭成信家庭财产、.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月19日 5:41 PM							</td></tr>
@@ -29,6 +30,5 @@
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/9/n13009718.md#1" target="_blank">受贿数额特别巨大 王岐山大管家董宏被起诉</a><br></h3>6月9日，中共中央巡视组前副组长董宏被起诉，其被指控受贿数额特别巨大。董宏被指是中共国家副主席王岐山的“大管家”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月09日 4:35 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/9/n13008897.md#1" target="_blank">东方资产前副总裁被查 知情者爆涉案金额不小</a><br></h3>6月8日，中国东方资产管理股份有限公司(下称东方资产)前副总裁胡小钢个人涉嫌“严重违纪违法”，目前正被调查。有知情者透露，胡小钢涉案金额不小。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月09日 11:50 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/4/n12997704.md#1" target="_blank">广州中院前副院长向金华退休两年后被查</a><br></h3>6月3日，中共广州市中级法院前副院长向金华涉嫌“严重违纪违法”，目前正接受调查。向金华是退休两年后被查。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月04日 11:29 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/5/31/n12986897.md#1" target="_blank">涉官商勾结 河北华银城烂尾 逾五千业主受害</a><br></h3>大陆烂尾楼频发，河北华银城的受害业主为此倾家荡产，上访无果，申诉无门后，不堪重负的他们甚至无奈自杀。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月31日 12:23 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/nf5773.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/hupjdu3701/djy/blob/master/gb/nf5773_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/hupjdu3701/djy/blob/master/gb/nf5773_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/hupjdu3701/djy/blob/master/gb/nf5773_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/hupjdu3701/djy/blob/master/gb/nf5773_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/hupjdu3701/djy/blob/master/gb/nf5773_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/hupjdu3701/djy/blob/master/gb/nf5773_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/hupjdu3701/djy/blob/master/gb/nf5773_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/hupjdu3701/djy/blob/master/gb/nf5773_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/hupjdu3701/djy/blob/master/gb/nf5773_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/hupjdu3701/djy/blob/master/gb/nf5773_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/hupjdu3701/djy/blob/master/gb/nf5773.md#1<br><a href="https://github.com/hupjdu3701/djy/blob/master/gb/nf5773.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hupjdu3701/djy/blob/master/gb/nf5773.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf5773.htm">https://www.epochtimes.com/gb/nf5773.htm</a>    （国内需<a href="https://github.com/hupjdu3701/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
