--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -1,4 +1,13 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr><tr><td width="742"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"></a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"></a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"></a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"></a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/27/n13050322.md#1" target="_blank">任重：七一前北京再入户调查人口 清查什么？</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/27/n13050322.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13037490-GettyImages-1231623079@1200x1200-150x120.jpeg" align ="left"></a>“区不漏房，房不漏户，户不漏人，人不漏项”，北京市政府发出重要通知，从6月15日开始入户调查人口。通知要求，调查6万人，240个社区，做到“不漏一户、不落一人”。
+
+要知道，刚刚结束才几个月的第七次全国人口普查，有长表和短表，都是政府要了解的信息。为什么北京还要劳民伤财地再入户调查一遍呢？
+
+答案就是一个字：怕.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月27日 1:55 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/27/n13050261.md#1" target="_blank">千百度：警察升港府二号 网友：枪杆子政权来了</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/27/n13050261.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13050330-DSC_7540-01--150x120.jpeg" align ="left"></a>新华社6月25日发布消息，北京当局决定任命香港保安局局长李家超为香港政务司司长、香港警务处处长邓炳强为香港保安局局长。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月27日 1:11 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/27/n13050253.md#1" target="_blank">钟原：钟南山欲唱赞歌却泄漏实情</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/27/n13050253.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13050289-Zhong-Nanshan_20210626-150x120.jpg" align ="left"></a>中共党庆在即，中共国家卫健委十分配合，6月18日的疫情通报中，还公布了广东6个本土病例，但从6月19日起就不再通报本土病例，连无症状感染者都全部属于境外输入。看来，中共高层下了死命令，临近7月1日，绝不允许再有新病例出现。
+
+中共再一次从政治上令疫情“清零”，但这次党媒却没敢刻意高调宣传“清零”，于是又找来了钟南山.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月27日 12:42 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/26/n13049438.md#1" target="_blank">中美军力对比 差距到底多大（三）</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/26/n13049438.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13049499-51207782655_e528230cbb_k-150x120.jpg" align ="left"></a>世界军力排名第三位的中共，已经公开向美国挑衅；美军也正式把中共列为头号对手。中美军力越接近，中共主动挑起战事的可能性就越大。目前中美军力差距到底有多大呢？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月27日 2:09 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/26/n13048664.md#1" target="_blank">【名家专栏】北京面临棘手的人口问题</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/26/n13048664.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13048666-ET-banner8-700x420-150x120.jpg" align ="left"></a>北京现在很清楚，几十年的独生子女政策终于开始使中国经济缺乏劳动力和增长潜力。第一个迹象出现在2016年，当时政府终于废除了当时对家庭规模近40年的严格规定。尽管公众几乎没有反应，出生率仍然低于替代人口，但该国迄今没有出现人口急剧下降，这只是因为长寿使老年退休人口增加。中国仍然面临着年轻劳动力进入劳动市场的匮乏，这种情况.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月27日 12:38 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/26/n13049010.md#1" target="_blank">田云：中共的“新型政党制度”是何货色？</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/26/n13049010.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2017/11/zhongnaihai-150x120.jpg" align ="left"></a>中共的一党专制剥夺了人民参政、议政的权利，并且依靠非法、暴力来维持，进一步迫害民众。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月26日 3:54 PM			</td></tr>
@@ -26,13 +35,8 @@
 或许美国内部的确探讨了布林肯与王毅会晤的可能.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 7:09 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/5/n13001762.md#1" target="_blank">被遗忘的百年历史（VII） 1949至2020</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/5/n13001762.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13001777-GettyImages-55764139-150x120.jpg" align ="left"></a>在中共全方位的国土大掠夺下，生存在神州大地上的中华民族自身也遭遇了最深层的精神和心理上的大掠夺。在残酷而隐匿的心理背景下，古老的黄土地上出现了惊心动魄的自杀潮，同时出现了艺术和精神上的自戕。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 6:00 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/24/n13044901.md#1" target="_blank">【名家专栏】中共已成世界之敌而非竞争者</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/24/n13044901.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13044909-181727439-700x420-150x120.jpg" align ="left"></a>竞争者是与你一起打网球的人；或者是与你一样制造产品的人，你们都希望将产品卖给同一个客户，而客户只想跟一方打交道。竞争结束后，你们喝着啤酒放松下来，笑谈彼此竞争。乔?拜登总统在2020年的选举活动中大张旗鼓地称中共为“竞争者”而不是敌人。此举误导了美国。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 4:34 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/24/n13045556.md#1" target="_blank">陈思敏：芯片短缺曝中国汽车产业一大隐忧</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/24/n13045556.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/02/991982bc7162702c404219f21b9d0b89-150x120.jpg" align ="left"></a>6月23日消息，根据金融科技公司Susquehanna Financial Group的研究，今年5月份芯片交货周期拉长至18周、同比2018年出现的上一次芯片交期峰值高出4周多，达到史上新高。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 3:37 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/24/n13045437.md#1" target="_blank">张菁：三孩政策立法背后的党国意志</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/24/n13045437.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2011/10/1110280046242404-150x120.jpg" align ="left"></a>据陆媒报道，6月18日国务院已通过《中华人民共和国人口与计划生育法〈修正草案〉》，并交由全国人大常委会审议。
-
-二孩政策法案是2015年10月29日中共十八届五中全会提出的，国务院于当年12月2日通过了此法的修正案，人大于12月27日通过，2016年1月1日起施行。时间上不超过两个月，可谓应对迅速。由此相信，此次三.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 3:21 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/24/n13045486.md#1" target="_blank">阳剑：中共焰花纷飞 百姓血泪流河</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/24/n13045486.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13021258-008bIAPVgy1gri2eu1q4dj31690s7npd-150x120.jpg" align ="left"></a>2021年7月前夕，中共为了搞“百年大庆”，在广东封锁Delta 新冠疫情，很多小区封锁，民众怒吼生存艰难，但中共把全国的疫情确诊数一夜间修改下跌几千例。为营造党庆气氛，不出“乱子”，在全国各地抓捕、监视上访者、维权人士、法轮功修炼者、正义异己人士、进京限止截流盘查，天安门关闭开放，禁售禁飞无人飞机，北京连鸽子都禁飞….........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 3:09 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/24/n13044903.md#1" target="_blank">【名家专栏】北约最大威胁是中共不是俄罗斯</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/24/n13044903.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13044928-GettyImages-1233446600-150x120.jpg" align ="left"></a>北约终于以一种比较认真的态度处理（共产）中国问题了。这个以美国为首的联盟在一份联合公报中，把中国描述为一个“挑战”。但北约反应迟钝，仍步履蹒跚。虽然正确地认识到俄罗斯是北约主要的军事威胁（该国在2014年入侵乌克兰，而且仍然占据在那里），但这个历史上最强大的民主联盟继续淡化历史上最大的极权主义威胁：（共产）中国。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 3:08 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/24/n13044667.md#1" target="_blank">【网海拾贝】谁靠近中共谁倒楣</a><br></h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/24/n13044667.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13043133-a9a980ab5a3bd9459c4a060dc11e8f90-150x120.jpg" align ="left"></a>周五，我收到朋友转来的一篇有关“全球受中共病毒打击最严重的10个国家中，有一半以上使用中国疫苗”的媒体报导。数据来源于一个叫Our World in Data的机构，它是由英国牛津大学创建的在线数据库，提供每百万人每天的感染数据。该机构通过对塞舌尔、乌拉圭、蒙古、科威特、智利等国家的感染数据进行分析后，得出上述结论。该.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 1:20 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/27/n13050342.md#1" target="_blank">中共罪行录之三十三：钦州剖腹食肝风</a><br></h3>文革期间，广西滥杀无辜，手段残忍，数字惊人。其中钦州地区最先流行的剖腹食肝风，更是令人触目惊心！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月27日 1:27 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/27/n13050025.md#1" target="_blank">共产党在中国城市发动“反帝”革命运动（上）</a><br></h3>前面的第五、六两篇简要讲述了共产党在湖南、广东、河南等省农村搞的农民运动，叫“反封建”革命。共产党搞“反帝”革命，主要在城市，它最引以为豪的是安源路矿、京汉铁路、五卅与省港工人大罢工。中共搞罢工运动的领导机构，叫中国劳动组合书记部，1921年8月在上海成立，主任张国焘，是中华全国总工会的前身。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月27日 9:19 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/27/n13049996.md#1" target="_blank">杨箭：百年中共的百年罪恶</a><br></h3>中华文明，本茬人类伟大、悠久的文明，到了清朝末年，在西方实证科学、现代思潮等冲击下，不断式微。到民国时期，它原本可以通过调整、休养，到中国气功和传统文化复兴时得以恢复优化，但是，中共来了。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月27日 9:09 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hupjdu3701/djy/blob/master/gb/21/6/26/n13049849.md#1" target="_blank">周恩来下令杀顾顺章家十多人是怎么回事？</a><br></h3>最近，中共高官叛逃美国，成为海外媒体报道的热门话题。6月19日，中国检察监察网发表文章《永不叛党不仅仅是一句誓言》，专门提到1931年5月21日中共中央发出的“永远开除叛徒顾顺章党籍”的第223号通知，由此引出周恩来下令杀顾顺章家里十多人的历史旧案。
 顾顺章何许人也？
