--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -16,7 +16,7 @@
 随.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 5:20 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053872.md#1" target="_blank">香港政情大风暴 时评人纷封口及关频道</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053872.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13053874-DSC_7043-01-150x120.jpg" align ="left"></a>临近“七一”，香港传媒业界再遭受打压。继《苹果日报》被迫停刊后，6月27日，再有一名《苹果》前主笔卢峯被捕。香港网络媒体、时事评论人士与政治漫画家纷将文章、影片下架，关停社交频道，形成寒蝉效应。记协强烈谴责当局再次针对新闻工作者，形容恐怖笼罩业界。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 3:01 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053664.md#1" target="_blank">美众院调查 揭中共如何操纵美企为其服务</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053664.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13015095-gettyimages-2062513--150x120.jpeg" align ="left"></a>美国众议院情报委员会共和党的一份初步调查报告显示，中共正在操纵美国公司，以帮助其实现塑造公众舆论、影响政府决策和获取美国技术的目标。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 2:24 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13052583.md#1" target="_blank">【百年透视】共产主义是国际恐怖主义</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13052583.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13052784-A1--150x120.jpeg" align ="left"></a>中共建立至今100年，统治中国大陆也71年了。特别在建国后它利用掌控和垄断的政治、经济、文化、教育和媒体等资源，篡改和歪曲人类文明历史、掩盖它百年共产革命和专政反人类犯罪真相，为其杜撰了一套政治合法性面具，欺骗了不少没有身受其害的人，包括西方政界与学界。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 2:10 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13052583.md#1" target="_blank">【百年透视】共产主义是国际恐怖主义</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13052583.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13056286-1960b835621bd24ec0531f4f75b717f6-150x120.jpg" align ="left"></a>中共建立至今100年，统治中国大陆也71年了。特别在建国后它利用掌控和垄断的政治、经济、文化、教育和媒体等资源，篡改和歪曲人类文明历史、掩盖它百年共产革命和专政反人类犯罪真相，为其杜撰了一套政治合法性面具，欺骗了不少没有身受其害的人，包括西方政界与学界。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 2:10 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053586.md#1" target="_blank">通胀影响 九大食品和日用品品牌拟涨价</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053586.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/12/groceryshopping-150x120.jpg" align ="left"></a>随着美国疫情缓解，经济迅速恢复活力，现在美国人开始担心，未来几个月的通货膨胀率将大幅上升。全国各地的公司都在考虑提高价格，以抵消原材料、能源和运输等成本飙升的影响。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 1:32 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053804.md#1" target="_blank">组图：中共党庆草木皆兵 满街“朝阳群众”</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053804.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13053813-42-150x120.jpg" align ="left"></a>中共百年党庆前，北京进入特级战备，街头巷尾，武警、公安、便衣、“朝阳群众”，三步一哨五步一岗。天安门广场附近的污井盖都经过安检打封，可谓“滴水不漏”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 1:27 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13052220.md#1" target="_blank">“清算中共百年反人类罪”纽约法拉盛图片展</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13052220.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13052228-150312-150x120.jpg" align ="left"></a>在中共所谓“百年党庆”之际，纽约华人举办各种活动揭露和声讨中共百年罪恶，让更多华人及各族裔的民众认清中共反人类的本质。6月27日至7月2日，“基督徒公义联盟”在法拉盛图书馆前举办“清算中共百年反人类罪”图片展，历数中共百年罪恶。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 1:17 AM							</td></tr>
