--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -31,7 +31,9 @@
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046703.md#1" target="_blank">千百度：《苹果日报》不在了，但“苹果精神”长存</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046703.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13046777-210623162119100311-150x120.jpeg" align ="left"></a>“一个苹果掉下来了，千千万万个苹果会长出来”！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 3:02 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046542.md#1" target="_blank">罗慰年：百年较量的拐点</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046542.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13046640-GettyImages-1047275752-2-150x120.jpg" align ="left"></a>纽约巴纳德学院历史学教授肖恩．麦克米金（Sean McMeekin）的新书《斯大林的战争》（Stalin's War：A New History of World War II）试图“重新解释二战”。他将二战爆发的中心转移到东方，彻底改变了人们对这场全球冲突的理解。麦克米金指出，第二次世界大战不是“希特勒的战争”，而是.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 2:18 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046499.md#1" target="_blank">基督徒公义联盟：清算中共百年反人类罪行</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046499.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13046534-cd4fcd_00e63a2e77674e49b35e88ecf160dc73mv2-150x120.jpeg" align ="left"></a>中共是魔鬼邪灵。 1848年发表的《共产党宣言》第一句就说，“一个幽灵，共产主义的幽灵，在欧洲游荡”，直接自我坦白了共产党的本质—幽灵。这个幽灵当时在欧洲没有市场，就经苏共游荡到了中国，于1921年在中国落脚生根，迄今一百年整。这期间，这恶魔犯下了人类历史上亘古未有的反人类罪行，数亿无辜百姓惨死在它手下！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 1:03 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13051601.md#1" target="_blank">理悟：毒誓难救命</a><br></h3>中共建党百年来临之际，党魁带领其他六常委和号称“第八常委”的王岐山，以及在京的各部委大员进行所谓“重温入党誓词”。之后，大陆多个省级地方大员和中央部委“一把手”迅速一窝风跟进表忠，也带领地方官员宣读入党誓词。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月28日 7:11 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13045927.md#1" target="_blank">钟原：红色党庆难解中共灰暗危局</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13045927.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13045948-GettyImages-1324996416-150x120.jpg" align ="left"></a>近日，中共各党媒进入了党庆倒计时的宣传高峰，各网站首页红彤彤的刊头煞是扎眼，各地红色党史纪念馆安排了大量企事业人员和学生参观，红色旅游到处叫卖，相信北京天安门广场也正在铺满更多的红色。内外交困之际，中共高层试图用一系列红色庆祝为党续命，也为自己保住权力，然而再多的红色，却再也遮不住中共灰暗的危局。
+
+6月24日，新.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 9:58 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13050342.md#1" target="_blank">中共罪行录之三十三：钦州剖腹食肝风</a><br></h3>文革期间，广西滥杀无辜，手段残忍，数字惊人。其中钦州地区最先流行的剖腹食肝风，更是令人触目惊心！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月27日 1:27 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13050025.md#1" target="_blank">共产党在中国城市发动“反帝”革命运动（上）</a><br></h3>前面的第五、六两篇简要讲述了共产党在湖南、广东、河南等省农村搞的农民运动，叫“反封建”革命。共产党搞“反帝”革命，主要在城市，它最引以为豪的是安源路矿、京汉铁路、五卅与省港工人大罢工。中共搞罢工运动的领导机构，叫中国劳动组合书记部，1921年8月在上海成立，主任张国焘，是中华全国总工会的前身。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月27日 9:19 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13049996.md#1" target="_blank">杨箭：百年中共的百年罪恶</a><br></h3>中华文明，本茬人类伟大、悠久的文明，到了清朝末年，在西方实证科学、现代思潮等冲击下，不断式微。到民国时期，它原本可以通过调整、休养，到中国气功和传统文化复兴时得以恢复优化，但是，中共来了。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月27日 9:09 AM			</td></tr>
