--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -4,6 +4,7 @@
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13056042.md#1" target="_blank">中共发布百年大事记 数千万受害者被抹掉</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13056042.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13056049-000_8R928E-150x120.jpg" align ="left"></a>2021年6月27日中共发布建党百年大事记，其中将中共建政后实施的清洗、镇压、大饥荒、文革、“六四”惨案等重大事件文过饰非、轻描淡写，数千万死难者忽略不提。6月25日，美国国会提出了一份决议，“谴责中国共产党100年严重侵犯人权”；议员们强调，中共建党百年，是反思中共犯下的滔天罪行，并向受害者致哀的时候。《九评共产党》一书揭露，杀人是中共维系统治最必要的手段.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 10:46 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055714.md#1" target="_blank">【唐浩视界】中共祸乱百年 五大冤案解密</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055714.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13051093-GettyImages-172632152-150x120.jpg" align ="left"></a>中共迎百年党庆，全力掩盖五大冤案？五大冤案真相解密，数千万人非正常死亡？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 9:53 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055335.md#1" target="_blank">【疫情6.29】意大利总理质疑中国疫苗效力不足</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055335.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13041466-GettyImages-1233596085-150x120.jpg" align ="left"></a>据约翰?霍普金斯大学的统计数据，截至美东夏令时周二（6月29日）上午4:00，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过1.81亿（181,436,184）例，死亡人数超过392万（3,929,780）人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 8:33 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055358.md#1" target="_blank">美澳加合作出关键矿物地图 保供应链安全</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055358.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1163776858-150x120.jpg" align ="left"></a>随着关注发展绿能产业，全球对关键矿物的需求也逐步增加。美国、澳大利亚和加拿大三国合作推出了一个稀土与关键矿物数据库，帮助制定稀土等关键矿物的开发策略，加强供应链安全。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 5:39 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13054287.md#1" target="_blank">武毒所专家隐瞒类似COVID-19病毒来源</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13054287.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12982492-GettyImages-643961414-1200x800-150x120.jpg" align ="left"></a>武汉病毒研究所的病毒学家石正丽，是许多中共病毒重点研究项目和功能获得型实验（gain-of-function experiments）的共同主线。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 2:25 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/26/n13049219.md#1" target="_blank">中共三任党魁对美外交态度缘何不同？</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/26/n13049219.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13054380-2-bei-jing-GettyImages-187734702-150x120.jpg" align ="left"></a>自习近平掌权后，中共的外交策略公开转向强硬。到了今天，中共党魁在对美的态度上，与之前江、胡时期出现了明显不同。同时，中共“战狼”外交官们以好战姿态，在全球树敌，引发各国反击。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 11:10 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053392.md#1" target="_blank">曾9次遭绑架 长沙女护士贺祥姑失踪一月余</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053392.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13053398-24b0b0ca6e3615c806f74480d2704dbe-150x120.jpg" align ="left"></a>长沙法轮功学员贺祥姑于2021年3月15日遭绑架，被非法关押至长沙市拘留所，绝水绝食抗议5天后回家；5月15日，再次失踪，至今一个多月下落不明。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 9:10 AM							</td></tr>
@@ -34,6 +35,5 @@
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13051282.md#1" target="_blank">苹果日报又一主笔冯伟光在机场被拘捕</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13051282.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13053737-DSC02404-150x120.jpg" align ="left"></a>多间港媒28日凌晨引述消息指，《苹果日报》前主笔、英文版执行总编辑冯伟光（笔名“卢峯”），27日晚在香港国际机场被警方国安处拘捕，涉嫌“勾结外国势力”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月28日 1:40 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/1/n12992285.md#1" target="_blank">【思想领袖】阿马里：自由的堕落和时代危机</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/1/n12992285.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13051504-et-150x120.jpg" align ="left"></a>20世纪60年代，亚历山大?索尔仁尼琴秘密撰写了《古拉格群岛》（The Gulag Archipelago），这是一部对苏联体制的控诉，它是如此深刻、如此具有谴责性，以至于成了苏联共产主义垮台的关键催化剂。索尔仁尼琴清楚地看到了共产主义的罪恶。然而在他流亡到美国后，他对西方的批评，震惊了全世界。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月27日 11:55 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13050937.md#1" target="_blank">省钱大有门道 美国杂货店购物秘诀</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13050937.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13050945-shutterstock_1101833855-700x420-150x120.jpg" align ="left"></a>我喜欢发现秘密——那些不为人知的信息，然后将之传播出去。例如，我常去的超市和大多数超市一样，在产品售罄时会给您一个“货到优先购物凭单”，这样，你就不会失望，在我看来，这真不错，因上面没有截止日期。但这里还藏有一个秘密：届时凭这张票我能买多少这种东西。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月27日 11:38 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13050458.md#1" target="_blank">知情者爆一带一路项目 大陆劳工命如草芥</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13050458.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13050485-IMG_6617-150x120.jpg" align ="left"></a>“太不可思议了，这个公司简直太不人道了，把人往死里逼，在这个地方我感觉死一个中国人公司还得剩钱，它不怕死人，中国人的命不是人命，所有的事情都能给你压下来。”......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月27日 10:45 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/mjhpml342/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/mjhpml342/djy/blob/master/gb/nf4514.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mjhpml342/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/mjhpml342/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
