--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -30,7 +30,7 @@
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046140.md#1" target="_blank">田云：反普世人权 中共最新白皮书自揭底牌</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046140.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13044242-210623162200100311-150x120.jpg" align ="left"></a>党媒称，“中国共产党为人权事业而生，也因人权事业而不断发展壮大。”这透露了一个大秘密：中共正是依靠侵犯人权才得以巩固统治，扩大势力，并逐步向外扩张。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 11:30 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046703.md#1" target="_blank">千百度：《苹果日报》不在了，但“苹果精神”长存</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046703.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13046777-210623162119100311-150x120.jpeg" align ="left"></a>“一个苹果掉下来了，千千万万个苹果会长出来”！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 3:02 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046542.md#1" target="_blank">罗慰年：百年较量的拐点</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046542.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13046640-GettyImages-1047275752-2-150x120.jpg" align ="left"></a>纽约巴纳德学院历史学教授肖恩．麦克米金（Sean McMeekin）的新书《斯大林的战争》（Stalin's War：A New History of World War II）试图“重新解释二战”。他将二战爆发的中心转移到东方，彻底改变了人们对这场全球冲突的理解。麦克米金指出，第二次世界大战不是“希特勒的战争”，而是.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 2:18 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046499.md#1" target="_blank">基督徒公义联盟：清算中共百年反人类罪行</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046499.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13046534-cd4fcd_00e63a2e77674e49b35e88ecf160dc73mv2-150x120.jpeg" align ="left"></a>中共是魔鬼邪灵。 1848年发表的《共产党宣言》第一句就说，“一个幽灵，共产主义的幽灵，在欧洲游荡”，直接自我坦白了共产党的本质—幽灵。这个幽灵当时在欧洲没有市场，就经苏共游荡到了中国，于1921年在中国落脚生根，迄今一百年整。这期间，这恶魔犯下了人类历史上亘古未有的反人类罪行，数亿无辜百姓惨死在它手下！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 1:03 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13051604.md#1" target="_blank">云鹤天：百年之后——中共外交部发言人答记者问</a><br></h3>云鹤天：百年之后——中共外交部发言人答记者问......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月28日 7:16 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13051601.md#1" target="_blank">理悟：毒誓难救命</a><br></h3>中共建党百年来临之际，党魁带领其他六常委和号称“第八常委”的王岐山，以及在京的各部委大员进行所谓“重温入党誓词”。之后，大陆多个省级地方大员和中央部委“一把手”迅速一窝风跟进表忠，也带领地方官员宣读入党誓词。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月28日 7:11 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13050342.md#1" target="_blank">中共罪行录之三十三：钦州剖腹食肝风</a><br></h3>文革期间，广西滥杀无辜，手段残忍，数字惊人。其中钦州地区最先流行的剖腹食肝风，更是令人触目惊心！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月27日 1:27 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13050025.md#1" target="_blank">共产党在中国城市发动“反帝”革命运动（上）</a><br></h3>前面的第五、六两篇简要讲述了共产党在湖南、广东、河南等省农村搞的农民运动，叫“反封建”革命。共产党搞“反帝”革命，主要在城市，它最引以为豪的是安源路矿、京汉铁路、五卅与省港工人大罢工。中共搞罢工运动的领导机构，叫中国劳动组合书记部，1921年8月在上海成立，主任张国焘，是中华全国总工会的前身。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月27日 9:19 AM			</td></tr>
